<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">


        <item
            android:id="@+id/menu_go_home"
            android:checkable="true"
            android:icon="@mipmap/iconhome"
            android:title="@string/menu_home" />

        <item
            android:id="@+id/menu_go_profile"
            android:checked="true"
            android:icon="@mipmap/iconprofile"
            android:title="@string/menu_profile" />

        <item
            android:id="@+id/menu_go_matches"
            android:checked="true"
            android:icon="@mipmap/iconmatches"
            android:title="@string/menu_matches" />

        <item
            android:id="@+id/menu_go_setting"
            android:checked="true"
            android:icon="@drawable/ic_settings"
            android:title="@string/menu_setting" />

        <item
            android:id="@+id/menu_go_logout"
            android:checked="true"
            android:icon="@mipmap/iconback"
            android:title="@string/menu_logout" />

    </group>
</menu>